<resources>
    <string name="app_name">HealthyBee</string>
    <string name="app_version">Version 1.0</string>
    <string name="copyright">Copyright © 2018 HealthyBee Developer. \nAll right reserved</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="youtube_api_key">AIzaSyCbehD6DCeDZHaGl8SUWKh1koTiHwKcvKY</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Solodroid</string>
    <string name="share_content">I Would like to share this with you. Here You Can Download This Application from PlayStore</string>
    <string name="whops">Whoops!</string>
    <string name="cannot_add_to_favorite">Cannot Add to Favorite</string>
    <string name="favorite_added">Added to Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_removed">Removed from Favorite</string>
    <string name="no_favorite_found">Your favorite list is empty because you don\'t add any Item in the favorite menu.</string>
    <string name="title_comments">Comments</string>
    <string name="title_update_comment">Comments</string>
    <string name="title_send_comment">Send Comment</string>
    <string name="txt_no_comment">Write your first comment&#8230;</string>
    <string name="msg_no_comment">no comments yet, write your first comment.</string>
    <string name="comment_hint">Write your comment&#8230;</string>
    <string name="confirm_send_comment">Send this comment?</string>
    <string name="confirm_update_comment">Update this comment?</string>
    <string name="confirm_delete_comment">Are you sure want to delete your comment?</string>
    <string name="sending_comment">Sending comment&#8230;</string>
    <string name="updating_comment">Updating comment&#8230;</string>
    <string name="txt_read">Read</string>
    <string name="txt_comment">Comment</string>
    <string name="txt_comments">Comments</string>
    <string name="txt_you">you</string>
    <string name="register_title">Thanks for Register</string>
    <string name="register_success">Register successfully&#8230;</string>
    <string name="register_process">Registering your account&#8230;</string>
    <string name="register_exist">Email address already used!</string>
    <string name="terms_text">By creating an account, you agree with our</string>
    <string name="terms_n_privacy">Terms &amp; Privacy</string>
    <string name="title_please_wait">Please Wait&#8230;</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_title">Good Job!</string>
    <string name="login_process">Processing login to your account&#8230;</string>
    <string name="login_success">Login Successfully&#8230;</string>
    <string name="login_failed">Invalid Email or Password!</string>
    <string name="login_disabled">Account has been disabled, please contact administrator to enable your account</string>
    <string name="login_required">Please login to write a comment.</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure want to logout?</string>
    <string name="logout_process">Processing logout to your account&#8230;</string>
    <string name="logout_success">Logout Successfully</string>
    <string name="forgot_message">Enter the email that used during registration.</string>
    <string name="forgot_failed_message">Email is not found in our database!</string>
    <string name="forgot_success_message">Password has been sent on your mail!</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="permission_msg">Need Permissions</string>
    <string name="permission_upload">This app needs access storage to upload your profile photo</string>
    <string name="download_msg">Downloading&#8230;</string>
    <string name="download_success">Image has been downloaded and saved on gallery.</string>
    <string name="title_menu_profile">Profile</string>
    <string name="title_menu_close">Close</string>
    <string name="title_menu_save">Save</string>
    <string name="title_menu_send">Send</string>
    <string name="title_menu_later">Favorite</string>
    <string name="title_menu_share">Share</string>
    <string name="title_menu_search">Search&#8230;</string>
    <string name="title_menu_browser">Open In Browser</string>
    <string name="title_login">LOGIN</string>
    <string name="title_register">REGISTER</string>
    <string name="title_forgot_password">FORGOT PASSWORD</string>
    <string name="title_nav_home">Home</string>
    <string name="title_nav_category">Category</string>
    <string name="title_nav_video">Video</string>
    <string name="title_nav_favorite">Favorite</string>
    <string name="title_nav_profile">Profile</string>
    <string name="title_about_privacy">Privacy Policy</string>
    <string name="title_about_rate">Rate</string>
    <string name="title_about_more">More</string>
    <string name="title_about_info">About</string>
    <string name="sub_title_about_privacy">App Terms &amp; Policies</string>
    <string name="sub_title_about_rate">Give your rate and feedback</string>
    <string name="sub_title_about_more">More apps from developer</string>
    <string name="offline">You\'re offline</string>
    <string name="msg_offline">The next time you\'re online, try saving some item to favorite that you can read without an Internet connection.</string>
    <string name="msg_no_news">Oops, it looks like there are no item available for this category at this time.</string>
    <string name="msg_no_category">Oops, No Category Found!</string>
    <string name="msg_no_news_found">Oops, No Item Found! if you want to continue search, please try enter another keyword!</string>
    <string name="msg_no_network">Oops, there is something problem with your network or the server is currently down, please try it again later.</string>
    <string name="msg_search_input">Please Fill Search Input</string>
    <string name="btn_retry">RETRY</string>
    <string name="dialog_success">Success!</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_read_more">Read More</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="dialog_settings">GOTO SETTINGS</string>
    <string name="edt_name">Name</string>
    <string name="edt_email">Email</string>
    <string name="edt_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_send">SEND</string>
    <string name="txt_profile_edit">EDIT</string>
    <string name="txt_profile_welcome">Welcome!</string>
    <string name="txt_profile_not_registered">Not registered?</string>
    <string name="txt_profile_register_now">Register Now</string>
    <string name="txt_profile_login">LOGIN</string>
    <string name="txt_profile_logout">Logout</string>
    <string name="updating_profile">Updating Profile</string>
    <string name="waiting_message">Please wait&#8230;</string>
    <string name="press_again_to_exit">Press again to exit app</string>
    <string name="privacy_policy_url">https://www.solodroid.net/android-news-app/privacy-policy/</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pause_for_next_day">Pause for next day</string>
    <string name="rs">\u20B9</string>
    <string name="food_order_pause">Food Order you would like to pause</string>
    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="email_id">Email id</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_your_mobile_number_to_get_otp">Enter your mobile number to get OTP</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="network_title">Internet Connection Error</string>
    <string name="network_message">No internet connection found please check internet connection and retry</string>
    <string name="please_wait">Please wait while processing…</string>
    <string name="menu">Menu</string>
    <string name="saved_address">Saved Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="home_office_address">Home, office address(30 chars only)</string>
    <string name="address_type">Address Type</string>
    <string name="address_line_1_star">Address Line 1*</string>
    <string name="address_line_2_star">Address Line 2*</string>
    <string name="city_star">City*</string>
    <string name="state_star">State*</string>
    <string name="state">State</string>
    <string name="zipcode_star">ZipCode*</string>
    <string name="zipcode">ZipCode</string>
    <string name="landmark_nearby_star">Landmark Nearby*</string>
    <string name="landmark_nearby">Landmark nearby</string>
    <string name="location">Location</string>
    <string name="change_my_timing">Change my timing</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_alert">Checkout Alert</string>
    <string name="confirm">Confirm</string>
    <string name="removing_item_from_cart_as_you_selected_quantity_0">Removing Item from cart as you selected Quantity \'0\'</string>
    <string name="delivery_support">Delivery Support</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_next">Next</string>
    <string name="action_demo">Demo</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_net_banking">NetBankingActivity</string>
    <string name="title_activity_cash_card">CashCardActivity</string>
    <string name="title_activity_emi">EmiActivity</string>
    <string name="title_activity_card">CardActivity</string>
    <string name="title_activity_user_cards">UserCardsActivity</string>
    <string name="title_activity_payments">PaymentsActivity</string>
    <string name="pay_now">Pay</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="click_here">Click here</string>
    <string name="if_cvv_and_expiry_on_card"> &#160;if you have CVV and Expiry on your card</string>
    <string name="if_dont_cvv_and_expiry_on_card"> &#160;if you don\'t have CVV and Expiry on your card</string>
    <string name="net_banking">Net Banking</string>
    <string name="title_activity_merchant_payment">MerchantPaymentActivity</string>
    <string name="title_activity_verify_api">VerifyApiActivity</string>
    <string name="test">Test</string>
    <string name="production">Production</string>
    <string-array name="environment_array">
        <item>@string/test</item>
        <item>@string/production</item>
    </string-array>
    <string name="login_now">LOGIN NOW</string>
    <string name="mobile_digits">1234567890</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="re_enter_password">Re-Enter Password</string>
</resources>