<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/tab_appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:theme="@style/AppTheme.AppBarOverlay">

            <include
                android:id="@+id/toolbarEditAddress"
                layout="@layout/toolbar_edit_address"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/tools"
                android:id="@+id/parent_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="5dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="8dp"
                card_view:cardElevation="8sp"
                card_view:cardPreventCornerOverlap="false"
                card_view:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/address_type"
                        android:textSize="@dimen/text_size_16" />


                    <EditText
                        android:id="@+id/etAddressType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/home_office_address"
                        android:inputType="text"
                        android:maxLength="30"
                        android:textSize="@dimen/text_size_16" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/address_line_1_star"
                        android:textSize="@dimen/text_size_16" />

                    <EditText
                        android:id="@+id/etAddressLine1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_line_1_star"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textSize="@dimen/text_size_16"
                        card_view:targetApi="o" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/address_line_2_star"
                        android:textSize="@dimen/text_size_16" />

                    <EditText
                        android:id="@+id/etAddressLine2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_line_2_star"
                        android:inputType="text"
                        android:textSize="@dimen/text_size_16" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/city_star"
                        android:textSize="@dimen/text_size_16" />

                    <EditText
                        android:id="@+id/etAddressCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city_star"
                        android:inputType="text"
                        android:textSize="@dimen/text_size_16" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/state_star"
                        android:textSize="@dimen/text_size_16" />

                    <EditText
                        android:id="@+id/etAddressState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/state"
                        android:inputType="text"
                        android:textSize="@dimen/text_size_16" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/zipcode_star"
                        android:textSize="@dimen/text_size_16" />

                    <EditText
                        android:id="@+id/etAddressZipCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/zipcode"
                        android:inputType="number"
                        android:maxLength="6"
                        android:textSize="@dimen/text_size_16" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/landmark_nearby_star"
                        android:textSize="@dimen/text_size_16" />

                    <EditText
                        android:id="@+id/etAddressLandmark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/landmark_nearby"
                        android:inputType="text"
                        android:textSize="@dimen/text_size_16" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
