<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lyt_bottom"
            android:layout_below="@+id/profile_image"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/title_register"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg_transparent"
                android:drawablePadding="15dp"
                android:hint="@string/enter_email_id"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:passwordToggleEnabled="true"
                tools:ignore="UnusedAttribute" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg_transparent"
                android:digits="@string/mobile_digits"
                android:drawablePadding="15dp"
                android:hint="@string/enter_mobile_no"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:passwordToggleEnabled="true"
                tools:ignore="UnusedAttribute" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg_transparent"
                android:drawablePadding="15dp"
                android:hint="@string/enter_password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:passwordToggleEnabled="true"
                tools:ignore="UnusedAttribute" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_re_enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:background="@drawable/edit_text_bg_transparent"
                android:drawablePadding="15dp"
                android:hint="@string/re_enter_password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:passwordToggleEnabled="true"
                tools:ignore="UnusedAttribute" />


            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="@color/colorRipple"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background_orange"
                    android:text="@string/btn_register"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </com.balysv.materialripple.MaterialRippleLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/terms_text"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/txt_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="@string/terms_n_privacy"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/already_have_account"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/login_now"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
