<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:text="@string/food_order_pause"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_order_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" />
    <TextView
        android:id="@+id/tv_pauseForNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/button_background"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:text="@string/pause_for_next_day"/>
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="@color/colorOrange"
        android:text="@string/dialog_cancel"/>
</LinearLayout>